# funathon-project2

./: .gitignore  1-ttc.qmd  2-rag-intro.qmd  README.md  _quarto.yaml  config.yaml  data.py  pyproject.toml  test_reproducibility.py  train.py
.github/workflows/: publish.yaml
argo-workflows/: baseline-gpu.yaml  data-prep.yaml  synth-gpu.yaml  train-gpu-v2.yaml  train-gpu.yaml  training.yaml
config/: benchmark_config.yaml  synth_config.yaml
notebooks/: data_exploration.ipynb
solutions/: 1-ttc.py
src/: benchmark_baseline.py  init_val_test.py  prepare_data.py  preprocess_data.py  train_model.py
src/data_preprocessing/: data_config.yaml  init_train_val_test.py  prepare_data.py  preprocess_data.py
src/training/: benchmark_baseline.py  benchmark_synth.py
