[project]
name = "funathon-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "ipywidgets>=8.1.8",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.9",
    "mlflow>=2.0",
    "plotnine>=0.14.0",
    "protobuf>=3.20,<4",
    "matplotlib>=3.10.8",
    "plotnine>=0.14.0",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas",
    "polars>=1.39.0",
    "qdrant-client>=1.17.0",
    "quarto>=0.1.0",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch>=2.4.0,<2.7",
    "torchtextclassifiers",
    "transformers>=5.3.0",
    "more-itertools>=11.0.2",
    "pyyaml>=6.0.3",
    "boto3>=1.43.0",
    "captum>=0.9.0",
    "hydra-core>=1.3.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchtextclassifiers = { git = "https://github.com/InseeFrLab/torchTextClassifiers.git" }
